Problem of second hand flickering resolved when it reached number 12. A further second hand was added. CLock now alternates between the two hands.

--- a/style.css
+++ b/style.css
@@ -60,7 +60,8 @@ body {
   top: 49.8%;
 }
 
-.seconds {
+.seconds,
+.seconds2 {
   opacity: 0.5;
   background-color: #000;
 }
